Add `/` as prefix to all menu items

--- a/hacksoft/templates/base.html
+++ b/hacksoft/templates/base.html
@@ -47,22 +47,22 @@
             <li class="child {% menu_active '^/$' %}">
               <a href="/">Home</a>
             </li>
-            <li class="child sibling {% menu_active 'how-we-work' %}">
+            <li class="child sibling {% menu_active '/how-we-work' %}">
               <a href="/how-we-work/">How we work</a>
             </li>
-           <li class="child sibling black-active-text {% menu_active 'our-clients' %}">
+           <li class="child sibling black-active-text {% menu_active '/our-clients' %}">
               <a href="/our-clients/">Our Clients</a>
             </li>
-            <li class="child sibling black-active-text {% menu_active 'our-team' %}">
+            <li class="child sibling black-active-text {% menu_active '/our-team' %}">
               <a href="/our-team/">Our Team</a>
             </li>
-            <li class="child sibling black-active-text {% menu_active 'contact-us' %}">
+            <li class="child sibling black-active-text {% menu_active '/contact-us' %}">
               <a href="/contact-us/">Contact Us</a>
             </li>
-            <li class="child sibling black-active-text {% menu_active 'hackcast' %}">
+            <li class="child sibling black-active-text {% menu_active '/hackcast' %}">
               <a href="/hackcast/">HackCast</a>
             </li>
-            <li class="child sibling black-active-text {% menu_active 'blog' %}">
+            <li class="child sibling black-active-text {% menu_active '/blog' %}">
               <a href="/blog/">Blog</a>
             </li>
           </ul>
