Add logos to portfolio page

--- a/hacksoft/templates/website/portfolio_page.html
+++ b/hacksoft/templates/website/portfolio_page.html
@@ -1,20 +1,52 @@
 {% extends 'base.html' %}
 {% load staticfiles i18n wagtailimages_tags wagtailcore_tags %}
-
 {% block content %}
 <div class="new technologies-we-use-heading">
   {% image page.header_image max-1366x1366 as header_image %}
-  <div class="new static-header dimmed-image" style="background-image: url({{ header_image.url }})">
+  <div
+    class="new static-header dimmed-image"
+    style="background-image: url({{ header_image.url }})"
+  >
     <div class="new heading">
-      <p>{{page.header_text}}</p>
+      <p>{{ page.header_text }}</p>
     </div>
     <div class="new scroll-down-arrow">
-      <img class="filer_image " alt="scroll_down_arrow.png" src="{% static  'images/header/scroll_down_arrow.png'%}" />
+      <img
+        class="filer_image "
+        alt="scroll_down_arrow.png"
+        src="{% static  'images/header/scroll_down_arrow.png'%}"
+      />
     </div>
   </div>
 </div>
 
-<div class="page-content">
-  <div class="clutch-widget" data-url="https://clutch.co" data-widget-type="5" data-expandifr="true" data-height="auto" data-snippets="true" data-clutchcompany-id="534443"></div>
+<div class="section how-we-work">
+  <div class="content-wrapper">
+    <div class="row box-container">
+      {% for placement in clients %}
+      <div class="client-box" data-client-number="{{ forloop.counter }}">
+        {% image placement.client.logo original as client_logo %}
+        <img
+          src="{{client_logo.url}}"
+          alt="{{ placement.client.name }}"
+          title="{{ placement.client.name }}"
+          class="filter_image wow flipInX box-logo"
+        />
+      </div>
+      {% endfor %}
+    </div>
+  </div>
+
+  <div class="page-content">
+    <div
+      class="clutch-widget"
+      data-url="https://clutch.co"
+      data-widget-type="5"
+      data-expandifr="true"
+      data-height="auto"
+      data-snippets="true"
+      data-clutchcompany-id="534443"
+    ></div>
+  </div>
+  {% endblock content %}
 </div>
-{% endblock content %}
